@@ -1,3 +1,8 @@
+2004-03-20 Don Willingham <donwillingham@users.sf.net> 1.4.3-cvs-b127
+
+	* Change: Task #84759, Patch #781169, RFE #411261. Add watermarking
+		support (visible watermarks by overlaying an image)
+
 2004-03-21 Christian Mohn <ch-moh@online.no> 1.4.3-cvs-b131
 
         * Change: Added LimitRequestBody setting for Apache2 in
